loadbalancer_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-loadbalancer
  labels:
    app: hello-world
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30123
    protocol: TCP
  selector:
    app: hello-world                              # Label selector
